# webshims

./: CMakeLists.txt
src/: CMakeLists.txt
src/emcurl/: CMakeLists.txt  curl.cpp  curl.h
src/emsocket/: CMakeLists.txt  Link.h  Packet.h  ProxyLink.cpp  ProxyLink.h  SocketAddr.h  VirtualSocket.cpp  VirtualSocket.h  WaitList.h  emsocket.cpp  emsocket.h  emsocketctl.cpp  emsocketctl.h  gen.sh  proxy.js  wrap.py
